// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should call onCancel 1`] = `
<div>
  <div
    class="mko-form  mko_u3fnxm-mkoForm"
  >
    <form
      autocomplete="off"
      class="mko-form__form  mko_u3fnxm-form"
      name="jest"
      novalidate=""
    >
      <div>
        Form Children
      </div>
      <div
        class="button-group"
      >
        <button
          class="button ripple button--standard  mko_c5ujei-button  mko_c5ujei-button_standard mko-form__submit"
          type="submit"
        >
          Save
        </button>
        <button
          class="button ripple button--standard  mko_c5ujei-button  mko_c5ujei-button_standard mko-form__cancel"
          type="button"
        >
          Cancel
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`should call onSubmit 1`] = `
<div>
  <div
    class="mko-form  mko_u3fnxm-mkoForm"
  >
    <form
      autocomplete="off"
      class="mko-form__form  mko_u3fnxm-form"
      name="jest"
      novalidate=""
    >
      <div>
        Form Children
      </div>
      <div
        class="button-group"
      >
        <button
          class="button ripple button--standard  mko_c5ujei-button  mko_c5ujei-button_standard mko-form__submit"
          type="submit"
        >
          Save
        </button>
        <button
          class="button ripple button--standard  mko_c5ujei-button  mko_c5ujei-button_standard mko-form__cancel"
          type="button"
        >
          Cancel
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`should display custom submit button text 1`] = `
<div>
  <div
    class="mko-form  mko_u3fnxm-mkoForm"
  >
    <form
      autocomplete="off"
      class="mko-form__form  mko_u3fnxm-form"
      name="jest"
      novalidate=""
    >
      <div>
        Form Children
      </div>
      <div
        class="button-group"
      >
        <button
          class="button ripple button--standard  mko_c5ujei-button  mko_c5ujei-button_standard mko-form__submit"
          type="submit"
        >
          Save - Jest
        </button>
        <button
          class="button ripple button--standard  mko_c5ujei-button  mko_c5ujei-button_standard mko-form__cancel"
          type="button"
        >
          Cancel
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`should render children 1`] = `
<div>
  <div
    class="mko-form  mko_u3fnxm-mkoForm"
  >
    <form
      autocomplete="off"
      class="mko-form__form  mko_u3fnxm-form"
      name="jest"
      novalidate=""
    >
      <div
        id="jestChild"
      >
        Form Children
      </div>
      <div
        class="button-group"
      >
        <button
          class="button ripple button--standard  mko_c5ujei-button  mko_c5ujei-button_standard mko-form__submit"
          type="submit"
        >
          Save
        </button>
        <button
          class="button ripple button--standard  mko_c5ujei-button  mko_c5ujei-button_standard mko-form__cancel"
          type="button"
        >
          Cancel
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`should render title if truthy 1`] = `
<div>
  <div
    class="mko-form  mko_u3fnxm-mkoForm"
  >
    <h2
      class="mko-form__title  mko_u3fnxm-title"
    >
      jester
    </h2>
    <form
      autocomplete="off"
      class="mko-form__form  mko_u3fnxm-form"
      name="jest"
      novalidate=""
    >
      <div>
        Form Children
      </div>
      <div
        class="button-group"
      >
        <button
          class="button ripple button--standard  mko_c5ujei-button  mko_c5ujei-button_standard mko-form__submit"
          type="submit"
        >
          Save
        </button>
        <button
          class="button ripple button--standard  mko_c5ujei-button  mko_c5ujei-button_standard mko-form__cancel"
          type="button"
        >
          Cancel
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`should render with minimum props 1`] = `
<div>
  <div
    class="mko-form  mko_u3fnxm-mkoForm"
  >
    <form
      autocomplete="off"
      class="mko-form__form  mko_u3fnxm-form"
      name="jest"
      novalidate=""
    >
      <div>
        Form Children
      </div>
      <div
        class="button-group"
      >
        <button
          class="button ripple button--standard  mko_c5ujei-button  mko_c5ujei-button_standard mko-form__submit"
          type="submit"
        >
          Save
        </button>
        <button
          class="button ripple button--standard  mko_c5ujei-button  mko_c5ujei-button_standard mko-form__cancel"
          type="button"
        >
          Cancel
        </button>
      </div>
    </form>
  </div>
</div>
`;
